# light-certificate-validator

./: Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  build.rs  run-docker.sh
proto/: validator.proto
snippets/: remote_light_validator_test.go
src/: dto.rs  main.rs  service.rs
